Fixed links on mobile

--- a/style.css
+++ b/style.css
@@ -279,7 +279,8 @@ button.btn {
     }
 
     #logo-wrapper img, a.btn {
-        margin-bottom: 35px;
+        margin-bottom: 17px;
+        margin-top: 17px;
     }
 
     .grid div img {
